adds persistent target file
